deploy/route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: internal-service
  namespace: default
spec:
  hosts:
  - micro-internal
  http:
  - match:
    route:
    - destination:
        port:
          number: 8080
        host: micro-internal
